--- a/index.html
+++ b/index.html
@@ -38,7 +38,23 @@
 
 
     </header>
-    <main></main>
+    <main>
+        <div class="content-container">
+            <h1>
+                <span>Doctor</span>STRANGE
+            </h1>
+            <span class="movie-title">
+                MULTIVERSE OF MADNESS
+            </span>
+            <p class="movei-text">
+                Um passeio emocionante pelo Multiverso com Doutor Estranho, seu amigo de confiança Wong e Wanda Maximoff, também conhecida como Feiticeira Escarlate.
+            </p>
+            <a href="#" class="movie-button">
+                Assita o Trailler &RightArrow;
+            </a>
+        </div>
+        <div class="social-container"></div>
+    </main>
     <footer></footer>
 </body>
 </html>
