--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/footer.css">
+    <script src="https://kit.fontawesome.com/dccc2225aa.js" crossorigin="anonymous"></script>
     <title>Doctor Strange</title>
 
 </head>
@@ -46,14 +47,37 @@
             <span class="movie-title">
                 MULTIVERSE OF MADNESS
             </span>
-            <p class="movei-text">
+            <p class="movie-text">
                 Um passeio emocionante pelo Multiverso com Doutor Estranho, seu amigo de confiança Wong e Wanda Maximoff, também conhecida como Feiticeira Escarlate.
             </p>
             <a href="#" class="movie-button">
                 Assita o Trailler &RightArrow;
             </a>
         </div>
-        <div class="social-container"></div>
+        <div class="social-container">
+            <ul>
+                <li>
+                    <a href="http:www.youtube.com/marvel">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/marvel">
+                        <i class="fa-brands fa-x-twitter"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="http:www.instagram.com/marvel">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="http:www.facebook.com/marvelBR">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </main>
     <footer></footer>
 </body>
