--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
             </ul>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        Copyright 2022 © | Edivaldo Sampaio
+    </footer>
 </body>
 </html>
