codificando a resposibilidade  Mobile

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/burger.css">
     <script src="https://kit.fontawesome.com/dccc2225aa.js" crossorigin="anonymous"></script>
+    <script src="./js/burger.js" defer></script>
     <title>Doctor Strange</title>
 
 </head>
@@ -21,6 +23,10 @@
             <img src="./img/logo-marvel.png" alt="Logo da Marvel">
         </a>
         <nav>
+            <a href="#" class="menu-burger-container">
+                <i class="menu-burger"></i>
+            </a>
+
             <ul class="links-container">
                 <li>
                     <a href="#">HOME</a>
